Added and tested new routes and adjusted oauth code.
